[package]
name = "unsafe-send-sync"
version = "0.1.0"
description = "Unsafe wrappers for making structs Send and/or Sync."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["unsafe", "send", "sync", "wrapper"]
categories = []
readme = "README.md"
repository = "https://github.com/bamilab/unsafe-send-sync"

[lib]
name = "unsafe_send_sync"
path = "src/lib.rs"
